--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "homepage": "https://github.com/yoggsoft/yoggsoft.github.io#readme",
   "devDependencies": {
+    "angular": "^1.5.9",
     "grunt": "^1.0.1",
     "grunt-contrib-htmlmin": "^1.4.0",
     "grunt-contrib-sass": "^1.0.0",
@@ -24,8 +25,9 @@
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-jslint": "^1.0.5",
+    "gulp-minify-css": "^1.2.4",
     "gulp-sass": "^2.3.2",
     "gulp-uglify": "^2.0.0",
-    "gulp-uglifycss": "^1.0.6"
+    "gulp-watch": "^4.3.11"
   }
 }
