--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gulp-autoprefixer": "^3.1.1",
     "gulp-jslint": "^1.0.5",
     "gulp-minify-css": "^1.2.4",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.2",
     "gulp-uglify": "^2.0.0",
     "gulp-watch": "^4.3.11"
